--- a/index.html
+++ b/index.html
@@ -1,64 +1,138 @@
 <!doctype html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Clickyevaluation by joschac</title>
-
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <meta name="viewport" content="width=device-width">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <title>Clicky Evaluation</title>
+    <meta charset="utf8">
+    <link rel="stylesheet" href="style.css" charset="utf-8">
   </head>
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>Clickyevaluation</h1>
-        <p></p>
+  <a href="https://github.com/stefankoegel/clickyEvaluation"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png"></a>
+    <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.1.9/ace.js" charset="utf-8"></script>
+    <script>
+      jQuery(function() {
+        var editor = ace.edit("definitions");
+        editor.setTheme("ace/theme/kuroir");
+        editor.getSession().setMode("ace/mode/haskell");
+        editor.getSession().setTabSize(8);
+        editor.setShowPrintMargin(false);
+      });
+    </script>
+    <script charset="utf-8" src="Main.js"></script>
 
-        <p class="view"><a href="https://github.com/joschac/clickyEvaluation">View the Project on GitHub <small>joschac/clickyEvaluation</small></a></p>
+    <div id="info"></div>
 
+    <h3>Expression</h3>
+    <input type="text" id="input" size="120" value="sum (map (^2) [1,2,3,4])">
 
-        <ul>
-          <li><a href="https://github.com/joschac/clickyEvaluation/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/joschac/clickyEvaluation/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/joschac/clickyEvaluation">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/joschac">joschac</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
+  <div class="frame">
+    <div id="topLevelOutput-container">
+        <div id="output-container">
+        </div>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
+  </div>
+
+<h3> Histroy </h3>
+    <div id="history-container">
+    </div>
+
+    <h3>Definitions</h3>
+    <div class="ace" id="definitions">
+and (True:xs)  = and xs
+and (False:xs) = False
+and []         = True
+
+or (False:xs) = or xs
+or (True:xs)  = True
+or []         = False
+
+all p = and . map p
+any p = or . map p
+
+head (x:xs) = x
+tail (x:xs) = xs
+
+take 0 xs     = []
+take n (x:xs) = x : take (n - 1) xs
+
+drop 0 xs     = xs
+drop n (x:xs) = drop (n - 1) xs
+
+elem e []     = False
+elem e (x:xs) = if e == x then True else elem e xs
+
+max a b = if a >= b then a else b
+min a b = if a <= b then a else b
+
+maximum (x:xs) = foldl max x xs
+minimum (x:xs) = foldl min x xs
+
+length []     = 0
+length (x:xs) = 1 + length xs
+
+zip (x:xs) (y:ys) = (x, y) : zip xs ys
+zip []      _     = []
+zip _       []    = []
+
+zipWith f (x:xs) (y:ys) = f x y : zipWith f xs ys
+zipWith _ []     _      = []
+zipWith _ _      []     = []
+
+unzip []          = ([], [])
+unzip ((a, b):xs) = (\(as, bs) -> (a:as, b:bs)) $ unzip xs
+
+curry f a b = f (a, b)
+uncurry f (a, b) = f a b
+
+repeat x = x : repeat x
+
+replicate 0 _ = []
+replicate n x = x : replicate (n - 1) x
+
+enumFromTo a b = if a <= b then a : enumFromTo (a + 1) b else []
+
+sum (x:xs) = x + sum xs
+sum [] = 0
+
+product (x:xs) = x * product xs
+product [] = 1
+
+reverse []     = []
+reverse (x:xs) = reverse xs ++ [x]
+
+concat = foldr (++) []
+
+map f []     = []
+map f (x:xs) = f x : map f xs
+
+not True  = False
+not False = True
+
+filter p (x:xs) = if p x then x : filter p xs else filter p xs
+filter p []     = []
+
+foldr f ini []     = ini
+foldr f ini (x:xs) = f x (foldr f ini xs)
+
+foldl f acc []     = acc
+foldl f acc (x:xs) = foldl f (f acc x) xs
+
+scanl f b []     = [b]
+scanl f b (x:xs) = b : scanl f (f b x) xs
+
+iterate f x = x : iterate f (f x)
+
+id x = x
+
+const x _ = x
+
+flip f x y = f y x
+
+even n = (n `mod` 2) == 0
+odd n = (n `mod` 2) == 1
+
+fix f = f (fix f)
+</div>
+
   </body>
 </html>
